Justified paragraphs on larger screens

--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,7 @@ Main
     
     .story-text {
         font-size: 1.125rem;
+        text-align: justify;
     }
     
     .figure, .quote-text {
