--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* TODO: Fix inicials T letter, header title bottom margin and pag width issues */
 /* 
 =======================================================
 Global
