--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* TODO: Fix inicials T letter, header title bottom margin and pag width issues */
+/* TODO: Fix inicials T letter, header title bottom margin and page width issues */
 /* 
 =======================================================
 Global
